syntax="proto3";

package kafkaMessages;

import "google/protobuf/timestamp.proto";

option go_package="./;kafkaMessages";

message RegisterAccount{
  string AccountID = 1;
  string PlayerID = 2;
  string Username = 3;
  string Email = 4;
  string Password = 5;
}

message UpdateAccount {
  string AccountID = 1;
  string Username = 2;
  string Email = 3;
}

message ChangePassword {
  string AccountID = 1;
  string OldPassword = 2;
  string NewPassword = 3;
}

message BanAccountById {
  string AccountID = 1;
  bool IsBan = 2;
}

message DeleteAccount{
  string AccountID = 1;
}

message Account {
  string AccountID = 1;
  string PlayerID = 2;
  string Username = 3;
  string Email = 4;
  bool IsBan = 5;
  google.protobuf.Timestamp CreatedAt = 6;
  google.protobuf.Timestamp UpdatedAt = 7;
}

message AccountRegistered{
  Account account = 1;
}

message AccountUpdated{
  Account account = 1;
}

message AccountDeleted {
  string AccountID = 1;
}